<resources>
    <string name="app_name">Ant Express</string>
    <string name="Login">Iniciar Sesión</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="clave">Contraseña</string>
    <string name="Ingresar">Ingresar</string>

    <string name="btn_registrarse">Registrarme</string>
    <string name="formTitle">Job Application</string>
    <string name="FormDescription">Please complete the form below to apply for a position with us</string>
    <string name="nombreCompleto">Nombre completo</string>
    <string name="formFirstName">First Name</string>
    <string name="vueloTab"> <u>Vuelos</u></string>
    <string name="misreservasTab"> <u>Mis Reservas</u></string>
    <string name="checkinTab">Check In <u>Check In</u></string>
    <string name="formLastaName">Last Name</string>
    <string name="formCurrenAddress">Current Address</string>
    <string name="formAddressStreet1">Street Address</string>
    <string name="formStreetAddress2"> Street Address 2</string>
    <string name="formCity">City</string>
    <string name="formStateProvince">State/Province</string>
    <string name="formPostalZipCode">Postal/ Zip code</string>\
    <string name="formEmail">Email Address</string>
    <string name="formExampleEmail">example: nico@gmail.com</string>
    <string name="formPhoneNumber">Phone Number</string>
    <string name="formPhoneAreaCode">Area Code</string>
    <string name="formApplyingPosition">Applying for Position</string>
    <string name="formStartDate">Start date</string>
    <string name="formDateMonth">Month</string>
    <string name="formDateDay">Day</string>
    <string name="formDateYear">Year</string>
    <string name="formbtnSubmit">Submit</string>

    <string name="action_settings">Settings</string>
    <string name="Solicitues">Solicitudes</string>

    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <string name="formIconoDescription">iconoForm</string>
    <string name="register">Regístrese</string>
    <string name="passwordRegister">Nueva contraseña</string>
    <string name="btn_signIn">Iniciar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="formFullName">Nombre de usuario</string>
    <string name="confirmar_password">Confirmar contraseña</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="contraseña">Contraseña</string>
    <string name="btn_listar_solicitudes">Listar Solicitudes</string>
    <string name="btn_registrar_solicitud">Registrar Solicitud</string>
    <string name="formatDate1">dia/mes/año</string>
    <string name="img_login">img_login</string>
    <string name="img_ingresar">Img_Ingresar</string>
    <string name="registrarse">¿No tiene cuenta? Regístrese</string>
    <string name="cambioClave">Cambiar contraseña</string>
    <string name="img_header">img_header</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cambiar_contrase_a">Cambie su contraseña</string>
    <string name="img_cambiarclave">img_cambiarClave</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva Contraseña</string>
    <string name="action_search">Buscar</string>
    <string name="search_hint">Ingrese Nombre</string>
    <string name="login_cambiar_clave">¿Olvidó su contraseña?</string>
    <string name="userApt">Job Application</string>


    <string-array name="ruta_arrays">
        <item>SJO-MIA</item>
        <item>SJO-LA</item>
        <item>SJO-PAR</item>
        <item>SJO-SWE</item>
        <item>SJO-TYO</item>
        <item>SJO-GUA</item>
        <item>SJO-PAM</item>
        <item>SJO-CAR</item>
        <item>SJO-CMX</item>
    </string-array>

    <string-array name="pasajeros_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
