<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditJobAplication">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:stretchColumns="1">

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/formIconoDescription"
                    app:srcCompat="@drawable/ic_work_black_24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/formTitle"
                        android:fontFamily="@font/montserrat"
                        android:letterSpacing="0.16"
                        android:textColor="@color/colorIcons"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="263dp"
                        android:layout_height="47dp"
                        android:text="@string/FormDescription"
                        android:textColor="#000000" />
                </LinearLayout>

            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/formFullName"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#000000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/id_edt_FirstName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/formFirstName"
                    android:fontFamily="@font/montserrat"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/id_edt_lastName"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/formLastaName"
                    android:fontFamily="@font/montserrat"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/formCurrenAddress"
                    android:textColor="#000000"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/id_edt_streetAdd1"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/formAddressStreet1"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/id_edt_streetAdd2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/formStreetAddress2"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/id_edt_city"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:hint="@string/formCity"
                    android:fontFamily="@font/montserrat"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/id_edt_state"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:fontFamily="@font/montserrat"
                    android:ems="10"
                    android:hint="@string/formStateProvince"
                    android:importantForAutofill="no"
                    android:inputType="textPersonName"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/id_edt_postal"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/formPostalZipCode"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/id_spin_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="2" />

            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/formEmail"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/id_edt_email"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="2"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/formExampleEmail"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/formPhoneNumber"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#000000" />

                <EditText
                    android:id="@+id/id_edt_AreaCode"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/formPhoneAreaCode"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/id_edt_PhoneNumber"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/formPhoneNumber"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:fontFamily="@font/montserrat"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow
                style="@style/rowForm"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_span="0"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/formApplyingPosition"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/id_spin_Position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_span="2" />

            </TableRow>

            <TableRow style="@style/rowForm">

                <TextView
                    android:id="@+id/txv_StartDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:text="@string/formStartDate"
                    android:fontFamily="@font/montserrat"
                    android:textColor="#000000" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/id_txtV_startDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/formatDate1"
                    android:textColor="#2D1557"
                    android:textSize="14sp" />

            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/id_btn_Submit"
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_span="1"
                    android:background="@drawable/botton_round"
                    android:backgroundTint="@color/colorPrimary"
                    android:onClick="addJobApplication"
                    app:tint="@android:color/white"
                    app:srcCompat="@android:drawable/ic_menu_send" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
